# wasmcrime

./: Cargo.toml  README.md
.github/workflows/: main.yml  pr.yml
docs/: wasm_spec.md
lib/: Cargo.toml  README.md
lib/src/: lib.rs
lib/src/binary/: mod.rs
lib/tests/: binary.rs
